[package]
name = "pahs"
version = "0.1.0-alpha.0"
license = "MIT OR Apache-2.0"
authors = ["Dennis Duda <git@seri.tools>"]
edition = "2018"
keywords = ["parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with_snafu = []

[dependencies]
paste = { version = "1" }
snafu = { version = "0.6" }
# smallvec = "1.5"