[package]
name = "pahs"
description = "A pahsing (parsing) library"
version = "0.1.0-alpha.1"

license = "MIT OR Apache-2.0"
authors = ["Dennis Duda <git@seri.tools>"]
edition = "2018"
keywords = ["parser"]
homepage = "https://github.com/seritools/pahs"
repository = "https://github.com/seritools/pahs.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["loop_assert"]
with_snafu = []
loop_assert = []

[dependencies]
paste = { version = "1" }
snafu = { version = "0.6" }