[package]
name = "pahs"
description = "A pahsing (parsing) library"
version = "0.1.0-alpha.4"

license = "MIT OR Apache-2.0"
authors = ["Dennis Duda <git@seri.tools>"]
edition = "2018"
keywords = ["parser"]
homepage = "https://github.com/seritools/pahs"
repository = "https://github.com/seritools/pahs.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["pahs-snafu"]

[features]
default = ["loop_assert"]
loop_assert = []

[dependencies]
paste = "1"
snafu = "0.6"
