[package]
name = "pahs-snafu"
description = "Helpers for using pahs together with snafu"
version = "0.1.0-alpha.3"

license = "MIT OR Apache-2.0"
authors = ["Dennis Duda <git@seri.tools>"]
edition = "2018"
keywords = ["parser"]
homepage = "https://github.com/seritools/pahs"
repository = "https://github.com/seritools/pahs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6"
easy-ext = "0.2.4"
pahs = { path = "..", version = "0.1.0-alpha.2" }
